--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+[7.2q]
+
+2023-05-25  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README: Bump version to 7.2q (rev. Q).
+	* Makefile.am (libgc_la_LDFLAGS): Bump version-info to 2:6:1.
+	* Makefile.in: Regenerate.
+
 2023-05-16  Ivan Maidanski <ivmai@mail.ru>
 
 	* mark_rts.c (GC_exclude_static_roots_inner): Move check of
