--- a/ChangeLog
+++ b/ChangeLog
@@ -3,17 +3,20 @@
 
 * Acquire GC lock in GC_is_tmp_root and GC_register_disclaim_proc
 * Add 'lib' prefix to build artifact names in Makefile.direct
+* Add API to get total stopped-world marking time
 * Add I_HOLD_LOCK assertion to scratch_alloc/recycle and their callers
 * Add Linux example to README.cmake
 * Add assertion about GC lock to GC_add_roots_inner and its callers
 * Add assertion about kind argument range in GC_register_describe_type_fn
 * Add assertion that GC lock is held in start/continue_reclaim, reclaim_all
+* Add assertion that custom setspecific is not called to overwrite value
 * Add assertion to GC_maybe_gc that GC is not in progress
 * Add assertion to ensure GC_unmapped_bytes cannot underflow
 * Add assertion to verify GC_threads hash table entries are chained properly
 * Add assertions about GC_mark_state to alloc.c and mark.c
 * Add callback API to support ephemeron marking
 * Add check-deps goal to Makefiles to build the tests but not execute them
+* Add debug logging to GC_clear_exclusion_table and GC_exclude_static_roots
 * Add minimal testing of GC_allow_register_threads
 * Add missing cast in GC_is_init_called (refactoring)
 * Add missing undef GC_NO_THREAD_REDIRECTS in threaded tests
@@ -24,12 +27,14 @@
 * Adjust indentation in C preprocessor directives (reformatting)
 * Adjust naming of Win32/64 and x86/64 words in comments and documentation
 * Adjust printing on amount of unmapped memory after GC
+* Allow GC_push_roots to work even when no exclusions registered
 * Allow custom AO_SRC_DIR, CURSES, EXEEXT, HOSTCC/CFLAGS for Makefile.direct
 * Allow disable USE_PROC_FOR_LIBRARIES even if malloc is redirected on Linux
 * Allow gc_allocator<T> and friends to be defined in namespace boehmgc
 * Allow mprotect-based incremental GC on AIX and for all Linux targets
 * Allow passing custom CC and CXX to Makefile.direct
 * Allow passing custom CFLAGS[_EXTRA] to Makefile.direct
+* Allow single signal usage for both world suspend and resume in gctest
 * Allow testing of retry-signals functionality
 * Allow to build with forced WRAP_MARK_SOME
 * Allow to compile tests with custom NTHREADS set to zero
@@ -72,6 +77,7 @@
 * Check highest bit of word using SIGNB instead of cast to signed_word
 * Check out-of-memory and set in_thread_creation inside GC_new_thread
 * Check pointer tag in all mark procedures (E2K)
+* Clear GC_thread_key thread-local value on unregistering the thread
 * Collapse arch macro defines where possible (refactoring)
 * Consistent naming of GC_thread local variables (refactoring)
 * Consistent naming of variables of obj_kind type (refactoring)
@@ -102,9 +108,11 @@
 * Do not check presence of getcontext and dl_iterate_phdr by cmake on Win32
 * Do not compile pthread_start.c on Cygwin even if build shared libs (CMake)
 * Do not compile pthread_stop_world.c on Darwin (CMake)
+* Do not count time spent processing toggle-refs in stopped_mark
 * Do not define GC_pthread_start/exit for Orbis and Sony PSP (refactoring)
 * Do not define GETPAGESIZE on Win32 (refactoring)
 * Do not define THREAD_SANITIZER if GC is built w/o threads support
+* Do not do unnecessary GC_read_dirty() from GC_enable_incremental
 * Do not expose GC_nacl_gc_thread_self variable outside pthread_stop_world.c
 * Do not free entry in GC_delete_gc_thread to match that on Win32
 * Do not hard-code page size for wasm32-wasi (refactoring)
@@ -116,6 +124,7 @@
 * Do not reference internal files in comments of public header files
 * Do not set SIGBUS handler to catch write faults on Linux
 * Do not treat warnings as errors by default in digimars.mak
+* Do not use integer division in GC_soft_read_dirty
 * Do not wrap mark_some to catch faults if libraries registration is off
 * Document GC_ENABLE_SUSPEND_THREAD better in configure
 * Document GC_print_free_list shortly in gc_inline.h
@@ -156,6 +165,7 @@
 * Group NEED_FIND_LIMIT definitions in gcconfig.h (refactoring)
 * Group all thread id fields together in GC_thread (refactoring)
 * Group functions related to GC_calloc_explicitly_typed (refactoring)
+* Improve ABORT message in GC_darwin_sigbus
 * Include gc/gc[_cpp].h directly except for cord and tests (refactoring)
 * Include gc_inline.h from gc_priv.h (refactoring)
 * Include stdio.h and stdlib.h only from gc_priv.h (refactoring)
@@ -165,12 +175,14 @@
 * Install ChangeLog among doc files
 * Make abort message unique in write_fault_handler
 * Make all functions static in msvc_dbg.c except for backtrace[_symbols]
+* Make comparisons to the lowest heap boundary strict
 * Make links to mentioned platforms/README files in doc .md files
 * Mark GC_add_roots_inner() as GC_INNER (refactoring)
 * Mention CMake-based build in README.md and README.QUICK
 * Mention all doc files in overview document
 * Minimize THREADS-specific code in GC_invoke_finalizers (refactoring)
 * Minimize code difference between GC_push_marked/unconditionally
+* More clear message about total duration of full collections in gctest
 * Move GC_NO_THREADS_DISCOVERY definition to gcconfig.h (refactoring)
 * Move HAVE_CLOCK_GETTIME definition from gc_priv.h to gcconfig.h
 * Move fields common between Concatenation and Function to Generic structure
@@ -182,6 +194,7 @@
 * Move pthread_atfork() call to a separate function (refactoring)
 * Move public header files to include/gc in source tree
 * Move stack-related fields out of GC_thread to GC_stack_context_t
+* Move thread-only functions to pthread_support.c (refactoring)
 * Name all tests consistently (refactoring)
 * New API for disappearing links registration accepting interior pointers
 * New API for more optimal usage of GC_calloc_explicitly_typed
@@ -200,6 +213,7 @@
 * Print objs_in_block as zero for large objects in GC_print_block_list
 * Print thread number on marker thread creation failure
 * Print value of links in GC_dump_finalization_links
+* Provide a macro to check dirty bits consistency between MPROTECT/SOFT_VDB
 * Provide global non-throwing operator new/delete in gccpp library
 * Put faq.html to codebase, update it and convert it to Markdown format
 * Put gc_badalc/cpp.cpp instead of .cc ones in CMake script (MSVC/BCC/WCC)
@@ -230,16 +244,20 @@
 * Remove MAIN_THREAD flag in GC_thread (refactoring)
 * Remove OpenBSD uthreads (GC_OPENBSD_UTHREADS) support
 * Remove STACK_GROWS_DOWN explicit definitions in gcconfig.h (refactoring)
+* Remove STACK_GROWS_DOWN macro usage (refactoring)
 * Remove Symbian makefile
 * Remove USED_HEAP_SIZE macro (refactoring)
 * Remove ancient OS2_MAKEFILE, PCR-Makefile, SMakefile.amiga
 * Remove code duplication in GC_free[_inner] (refactoring)
+* Remove code duplication in gcconfig.h for Hurd (refactoring)
 * Remove comment from gc_cpp.h about bugs in ancient compilers
+* Remove commented out code in de_win
 * Remove doc.am, and move gc.man to base folder (refactoring)
 * Remove duplicate 'called once' check in GC_init_lib_bounds (refactoring)
 * Remove duplicate documentation of GC_UNDERSCORE_STDCALL in configure
 * Remove duplication of random numbers generator formula (refactoring)
 * Remove extra parentheses in return statement (refactoring)
+* Remove extra space after sizeof (reformatting)
 * Remove extra variable and rename argument of GC_new_hblk (refactoring)
 * Remove main_altstack group of static variables (refactoring)
 * Remove main_pthread_id variable (refactoring)
@@ -306,6 +324,7 @@
 * Unify GC_Thread_Rep and thread id type in win32_threads.c (refactoring)
 * Unify GC_[mark_]lock_holder variable definition (refactoring)
 * Update next_random_no state using AO primitive
+* Update time statistics about stopped marking even if abandoned
 * Use AO primitive in GC_noop1 instead of no_sanitize attribute
 * Use AO primitives in GC_RAND_NEXT instead of no_sanitize attribute
 * Use EXPECT in GC_add_to_heap, GC_lookup_thread and GC_lookup_by_pthread
