Update AUTHORS file (add David A. Holland)

--- a/AUTHORS
+++ b/AUTHORS
@@ -126,6 +126,7 @@ Dave Barrett <barrett@asgard.cs.colorado.edu>
 Dave Detlefs <detlefs@src.dec.com>
 Dave Korn <dave.korn.cygwin@googlemail.com>
 Dave Love <d.love@dl.ac.uk>
+David A. Holland <dholland@netbsd.org>
 David Ayers <d.ayers@inode.at>
 David Brownlee <abs@absd.org>
 David Butenhof <david.butenhof@hp.com>
