--- a/AUTHORS
+++ b/AUTHORS
@@ -290,6 +290,7 @@ Marek Vasut <marex@denx.de>
 Margaret Fleck <mfleck@illinois.edu>
 Mario Hoepfner <mario.hopfner@unity3d.com>
 Mario Topf <mario.topf@unity3d.com>
+Marius Gerbershagen <marius.gerbershagen@gmail.com>
 Mark Boulter <mboulter@vnet.ibm.com>
 Mark Mitchell <mark@codesourcery.com>
 Mark Reichert <markr@sirs.com>
