--- a/AUTHORS
+++ b/AUTHORS
@@ -284,6 +284,7 @@ Marcos Dione <Marcos_David.Dione@sophia.inria.fr>
 Marcus Herbert
 Marek Vasut <marex@denx.de>
 Margaret Fleck <mfleck@illinois.edu>
+Marius Gerbershagen <marius.gerbershagen@gmail.com>
 Mark Boulter <mboulter@vnet.ibm.com>
 Mark Mitchell <mark@codesourcery.com>
 Mark Reichert <markr@sirs.com>
