Update AUTHORS file (add Marius Gerbershagen) (a cherry-pick of commit 07a6d0ee8 from 'master')

--- a/AUTHORS
+++ b/AUTHORS
@@ -242,6 +242,7 @@ Marco Maggi <marco.maggi-ipsu@poste.it>
 Marcos Dione <Marcos_David.Dione@sophia.inria.fr>
 Marcus Herbert
 Margaret Fleck <mfleck@illinois.edu>
+Marius Gerbershagen <marius.gerbershagen@gmail.com>
 Mark Boulter <mboulter@vnet.ibm.com>
 Mark Mitchell <mark@codesourcery.com>
 Mark Reichert <markr@sirs.com>
