Update ChangeLog file (v7.6 changes) (a cherry-pick of commit cbc0d5455 from 'release-7_6')

--- a/ChangeLog
+++ b/ChangeLog
@@ -962,6 +962,14 @@ Also, includes 7.6.18 changes
 * Workaround Thread Sanitizer (TSan) false positive warnings
 
 
+== [7.6.20] (not released yet) ==
+
+* Eliminate compiler warning of missing cast in LONG_MULT after shift
+* Fix missing outermost parentheses in macro definitions in huge test
+
+Also, includes 7.4.26 changes
+
+
 == [7.6.18] 2023-05-26 ==
 
 * Fix IRIX5 defined wrongly on FreeBSD/mips
