--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 * Add 'lib' prefix to build artifact names in Makefile.direct
 * Add API to get total stopped-world marking time
 * Add I_HOLD_LOCK assertion to scratch_alloc/recycle and their callers
+* Add I_HOLD_LOCK assertions to ensure no race on reveal hidden pointers
 * Add Linux example to README.cmake
 * Add assertion about GC lock to GC_add_roots_inner and its callers
 * Add assertion about kind argument range in GC_register_describe_type_fn
@@ -14,7 +15,9 @@
 * Add assertion to ensure GC_unmapped_bytes cannot underflow
 * Add assertion to verify GC_threads hash table entries are chained properly
 * Add assertions about GC_mark_state to alloc.c and mark.c
+* Add assertions about hidden ptr lowest bit in toggle-refs implementation
 * Add callback API to support ephemeron marking
+* Add check that gc_hdrs.h and gc_locks.h are included only from gc_priv.h
 * Add check-deps goal to Makefiles to build the tests but not execute them
 * Add debug logging to GC_clear_exclusion_table and GC_exclude_static_roots
 * Add minimal testing of GC_allow_register_threads
@@ -22,15 +25,20 @@
 * Add missing undef GC_NO_THREAD_REDIRECTS in threaded tests
 * Add support of wasm32-wasi target
 * Add testing of remaining API functions (gctest and leaktest)
+* Add verbose logging of events of getting memory from OS
 * Adjust comments in block_unmap_inner
 * Adjust comments referring glibc version (documentation)
+* Adjust header includes in cord .c files (refactoring)
+* Adjust indent inside case statements in configure.ac (reformatting)
 * Adjust indentation in C preprocessor directives (reformatting)
 * Adjust naming of Win32/64 and x86/64 words in comments and documentation
+* Adjust pointer-to-int cast in GC_register_dynamic_libraries for WinCE
 * Adjust printing on amount of unmapped memory after GC
 * Allow GC_push_roots to work even when no exclusions registered
 * Allow custom AO_SRC_DIR, CURSES, EXEEXT, HOSTCC/CFLAGS for Makefile.direct
 * Allow disable USE_PROC_FOR_LIBRARIES even if malloc is redirected on Linux
 * Allow gc_allocator<T> and friends to be defined in namespace boehmgc
+* Allow incremental GC on OpenBSD
 * Allow mprotect-based incremental GC on AIX and for all Linux targets
 * Allow passing custom CC and CXX to Makefile.direct
 * Allow passing custom CFLAGS[_EXTRA] to Makefile.direct
@@ -41,6 +49,7 @@
 * Allow to randomly choose a CPU core if AO ops are emulated with locks
 * Allow to skip heap expansion in GC_init
 * Allow to unmap memory block right in GC cycle where block is freed
+* Allow to use print/check_marks_int_list() in gctest
 * Allow to use same signal for thread suspend and restart (default on E2K)
 * Always invoke pending finalizers in GC_generic_malloc_uncollectable
 * Always print error details message when gctest fails
@@ -62,11 +71,14 @@
 * Better document link argument of GC_general_register_disappearing_link
 * Better document missing debugging version for aligned allocation routines
 * Better document preprocessor-related pointer checking routines in gc.h
+* Better document why GC_REVEAL_POINTER should be used with GC lock held
 * Better separate libgc build- and use-time macro descriptions in README
+* Build cord/de test by WCC_MAKEFILE on Win32
 * Build extra/gc.c in digimars.mak
 * Build with GC_wcsdup support if wcslen exists
 * Call GC_init_parallel only from GC_init (refactoring)
 * Change GC_Thread_Rep in pthread_support.h to match that of win32_threads.c
+* Change NOT_MARKED value to non-zero (refactoring)
 * Change default GC_time_limit value from 50 to 15 ms
 * Change default value of max_prior_attempts to 3
 * Change enable_threads default to off if threads are unsupported (CMake)
@@ -79,32 +91,42 @@
 * Check pointer tag in all mark procedures (E2K)
 * Clear GC_thread_key thread-local value on unregistering the thread
 * Collapse arch macro defines where possible (refactoring)
+* Comment out argument names of functions in cord public headers
 * Consistent naming of GC_thread local variables (refactoring)
 * Consistent naming of variables of obj_kind type (refactoring)
+* Consistent use of CHECK_OUT_OF_MEMORY() in tests (refactoring)
+* Consistently use GC_word (instead of word) type in tests (refactoring)
 * Declare GC_noop1 as public function unconditionally
 * Declare GC_register_stackbottom symbol as internal on IA64 (refactoring)
 * Define ALIGNMENT macro based on CPP_WORDSZ value by default (refactoring)
 * Define GC_GLIBC_PREREQ internal macro (refactoring)
+* Define GC_GRANULE_BYTES macro based on GC_GRANULE_WORDS value (refactoring)
+* Define GC_VERSION_VAL_T public macro (refactoring)
 * Define GC_get_parallel and GC_set_markers_count in single-threaded GC
 * Define GC_print_stats as GC_INNER (refactoring)
 * Define GC_save_regs_ret_val variable only if used on IA64 (refactoring)
 * Define GC_self_thread_inner to lookup GC_thread of current thread
 * Define GC_thread type in a single place both for pthreads and Win32
+* Define LAZY_THRESHOLD const value as long in cord (refactoring)
 * Define and use SIGNAL_BASED_STOP_WORLD macro internally (refactoring)
 * Define counter variables as static in gctest (refactoring)
 * Define internal macro NO_SEH_AVAILABLE where SEH is absent (refactoring)
+* Define internal macro for pointers rounding up by a mask (refactoring)
 * Define macros in gcconfig.h to use sigaction for SIGSEGV and SIGBUS
 * Define marker_[b]sp only if needed (refactoring)
 * Define op and nwords local variables consistently across typd_mlc.c
 * Define public GC_MALLOC_EXPLICITLY_TYPED_IGNORE_OFF_PAGE()
 * Define public GC_[p]valloc() and redirect to them in leak_detector.h
 * Define sized delete operator in 'gc' class
+* Define tunable values in cordtest as macro (refactoring)
 * Disable H/W tag checking in mark procedures by default (E2K)
 * Disable memory unmapping explicitly in gcconfig.h for Emscripten
 * Disallow explicit unregister of non-main thread if registered by DllMain
 * Discard sections with pseudo-paths except heap in register_map_entries
 * Do incremental mark some in GC_collect_a_little even if GC is disabled
 * Do not add extra byte to large ignore-off-page and uncollectible objects
+* Do not check INV_SZ_COMPUTATION_CHECK macro (refactoring)
+* Do not check dl_iterate_phdr presence by build scripts on OS X and Win32
 * Do not check presence of getcontext and dl_iterate_phdr by cmake on Win32
 * Do not compile pthread_start.c on Cygwin even if build shared libs (CMake)
 * Do not compile pthread_stop_world.c on Darwin (CMake)
@@ -116,6 +138,7 @@
 * Do not expose GC_nacl_gc_thread_self variable outside pthread_stop_world.c
 * Do not free entry in GC_delete_gc_thread to match that on Win32
 * Do not hard-code page size for wasm32-wasi (refactoring)
+* Do not include gcconfig.h from extra/symbian source files (refactoring)
 * Do not include sched.h from pthread_start.c (refactoring)
 * Do not invoke GC_approx_sp() repeatedly in GC_stopped_mark (refactoring)
 * Do not invoke finalizers during thread creation or destruction
@@ -123,6 +146,7 @@
 * Do not put atomic_ops[_sysdeps].o to libgc.a in Makefile.direct
 * Do not reference internal files in comments of public header files
 * Do not set SIGBUS handler to catch write faults on Linux
+* Do not store E2K procedure stack to GC heap (refactoring)
 * Do not treat warnings as errors by default in digimars.mak
 * Do not use integer division in GC_soft_read_dirty
 * Do not wrap mark_some to catch faults if libraries registration is off
@@ -134,10 +158,16 @@
 * Document macros in config.h not referring to README (configure)
 * Document that GC_is_X API functions may return only zero or one
 * Document that GC_unregister_my_thread result value is dummy
+* Eliminate 'array subscript has type char' compiler warnings in os_dep
 * Eliminate 'atomic_thread_fence is unsupported with tsan' gcc-11 warning
 * Eliminate 'boolean result used in bitwise op' cppcheck FP in GC_thr_init
+* Eliminate 'cast discards const from target ptr type' clang warning in cord
+* Eliminate 'cast discards const/volatile from target type' warnings in libgc
+* Eliminate 'cast discards volatile from type' warnings in cordxtra, gctest
 * Eliminate 'checking if 1U<<12 is less than zero' cppcheck FP warning
+* Eliminate 'conversion may change sign' clang warnings in cord and tests
 * Eliminate 'n obtained from untrusted source' code defect FP in test_cpp
+* Eliminate 'no previous prototype' clang warnings
 * Eliminate 'parameter can be declared as const pointer' cppcheck warnings
 * Eliminate 'scope of p variable could be reduced' cppcheck warning in de.c
 * Eliminate 'skipping config since static_assert is unknown' cppcheck FP
@@ -153,8 +183,13 @@
 * Ensure GC_n_set_marks() does not count extra bits in hb_marks
 * Ensure GC_our_memory is updated while holding GC lock (refactoring)
 * Ensure a collection occurs between adjacent heap expansions
+* Ensure all macros defined in public cord_pos.h have 'CORD_' prefix
+* Ensure const value has proper type before negation operation in msvc_dbg
 * Ensure every test prints a message on success
 * Ensure that GC_init does not allocate any object itself (refactoring)
+* Explicitly check that word has at least 32 bits in shifts by 20+ bits
+* Export CORD_ec_append_cord(), CORD_ec_flush_buf() from cord shared library
+* Export CORD_oom_fn public variable from cord shared library
 * Export GC_apply_to_all_blocks() and GC_is_black_listed() as public API
 * Export setter and getter for pointer checking print procedures
 * Fail threadkeytest on pthread_create error in main loop
@@ -165,21 +200,26 @@
 * Group NEED_FIND_LIMIT definitions in gcconfig.h (refactoring)
 * Group all thread id fields together in GC_thread (refactoring)
 * Group functions related to GC_calloc_explicitly_typed (refactoring)
+* Implement LONG_MULT in portable way using multiplication of 32-bit words
 * Improve ABORT message in GC_darwin_sigbus
 * Include gc/gc[_cpp].h directly except for cord and tests (refactoring)
 * Include gc_inline.h from gc_priv.h (refactoring)
 * Include stdio.h and stdlib.h only from gc_priv.h (refactoring)
+* Include sys/types.h and unistd.h from a single place (refactoring)
 * Increase number of iterations in leak and middle tests
 * Increment allocated objects count after GC_memalign in gctest
+* Initial support of KOS/arm64
 * Initialize GC_retry_signals to true in GC_stop_init (refactoring)
 * Install ChangeLog among doc files
 * Make abort message unique in write_fault_handler
 * Make all functions static in msvc_dbg.c except for backtrace[_symbols]
 * Make comparisons to the lowest heap boundary strict
 * Make links to mentioned platforms/README files in doc .md files
+* Make shift size smaller in GC_CLANG/GNUC/GLIBC_PREREQ (refactoring)
 * Mark GC_add_roots_inner() as GC_INNER (refactoring)
 * Mention CMake-based build in README.md and README.QUICK
 * Mention all doc files in overview document
+* Mention proper CURSES value in Makefile.direct to build cord/de test
 * Minimize THREADS-specific code in GC_invoke_finalizers (refactoring)
 * Minimize code difference between GC_push_marked/unconditionally
 * More clear message about total duration of full collections in gctest
@@ -187,6 +227,7 @@
 * Move HAVE_CLOCK_GETTIME definition from gc_priv.h to gcconfig.h
 * Move fields common between Concatenation and Function to Generic structure
 * Move increment of GC_bytes_allocd to GC_alloc_large (refactoring)
+* Move internals of GC_[signed_]word definition to gc_config_macros.h
 * Move non-cord [pkg]include_HEADERS assignments to include.am (refactoring)
 * Move non-license info from LICENSE file to README and vice versa
 * Move platform-dependent getspecific() call to a dedicated function
@@ -196,6 +237,7 @@
 * Move stack-related fields out of GC_thread to GC_stack_context_t
 * Move thread-only functions to pthread_support.c (refactoring)
 * Name all tests consistently (refactoring)
+* Never use mmap() for storing procedure stack on E2K (refactoring)
 * New API for disappearing links registration accepting interior pointers
 * New API for more optimal usage of GC_calloc_explicitly_typed
 * New API function (GC_get_hblk_size) to get HBLKSIZE value
@@ -208,12 +250,16 @@
 * Preserve doc folders structure on package install
 * Prevent requesting blocks past max_heapsize in GC_collect_or_expand
 * Prevent use of redirected posix_memalign in GC_haiku_get_mem
+* Print heap size in bytes (not MB) in out-of-memory warning if small heap
 * Print in-use heap statistic on heap growth
 * Print iteration number on thread creation or join failure in tests
 * Print objs_in_block as zero for large objects in GC_print_block_list
 * Print thread number on marker thread creation failure
 * Print value of links in GC_dump_finalization_links
+* Provide GC_HIDE/REVEAL_NZ_POINTER public macros
+* Provide GC_init_gcj_malloc_mp with argument of GC_mark_proc type
 * Provide a macro to check dirty bits consistency between MPROTECT/SOFT_VDB
+* Provide debugging variant of GC_toggleref_add
 * Provide global non-throwing operator new/delete in gccpp library
 * Put faq.html to codebase, update it and convert it to Markdown format
 * Put gc_badalc/cpp.cpp instead of .cc ones in CMake script (MSVC/BCC/WCC)
@@ -224,17 +270,21 @@
 * Redirect aligned_alloc() and reallocarray() in leak_detector.h
 * Reduce number of iterations in disclaim and cpp tests
 * Reduce scope of local variables used for assertion checking in add_to_fl
+* Reduce some of big constants in tests to fit into 16-bit int type
 * Refactoring of GC_n_set_marks and GC_print_block_descr
+* Refactoring of rt_hash()
 * Refine WARN message in GC_proc_read_dirty regarding buffer size
 * Refine column names output by GC_print_block_list
 * Refine comment of GC_print_free_list regarding GC lock
 * Refine comments in code regarding DllMain-based threads registration
 * Refine comparisons to GC_greatest_plausible_heap_addr
 * Refine debug message in GC_suspend_handler_inner
+* Refine documentation of GC_init_gcj_malloc and GC_get_back_ptr_info
 * Refine documentation of GC_register_disclaim_proc and GC_finalized_malloc
 * Refine gcinterface.md that the allocator belongs to SGI STL
 * Relax required dependencies for atomicopstest (CMake)
 * Remove -o option where not needed in Makefile.direct (refactoring)
+* Remove CORD_max_len debugging symbol
 * Remove EXPORTED_FUNCTIONS linker flag for gctest (Emscripten)
 * Remove GC_copyright symbol
 * Remove GC_mark_threads variable (refactoring)
@@ -242,6 +292,7 @@
 * Remove GC_world_is_stopped variable (refactoring)
 * Remove IF_IA64 macro in pthread_stop_world (refactoring)
 * Remove MAIN_THREAD flag in GC_thread (refactoring)
+* Remove MARK_BIT_PER_GRANULE macro (refactoring)
 * Remove OpenBSD uthreads (GC_OPENBSD_UTHREADS) support
 * Remove STACK_GROWS_DOWN explicit definitions in gcconfig.h (refactoring)
 * Remove STACK_GROWS_DOWN macro usage (refactoring)
@@ -252,6 +303,7 @@
 * Remove code duplication in gcconfig.h for Hurd (refactoring)
 * Remove comment from gc_cpp.h about bugs in ancient compilers
 * Remove commented out code in de_win
+* Remove de_win.h dependency on cord.h (refactoring)
 * Remove doc.am, and move gc.man to base folder (refactoring)
 * Remove duplicate 'called once' check in GC_init_lib_bounds (refactoring)
 * Remove duplicate documentation of GC_UNDERSCORE_STDCALL in configure
@@ -263,14 +315,21 @@
 * Remove main_pthread_id variable (refactoring)
 * Remove msvc_dbg.h file (refactoring)
 * Remove obsolete AC_PROG_LIBTOOL in configure.ac (refactoring)
+* Remove oom_fn internal type from cord source (refactoring)
+* Remove outdated info from README about Linux/m68k bug
 * Remove private pthread_stop_world.h and darwin_stop_world.h (refactoring)
 * Remove redundant 'private' prefix in include directives in include/private
 * Remove redundant GC_ATTR_UNUSED for GC_mark_and_push
 * Remove redundant HOST_TIZEN macro check for SEARCH_FOR_DATA_START
+* Remove redundant Linux/SPARC checks (refactoring)
+* Remove redundant check a predefined macro of BCC (refactoring)
+* Remove redundant includes from tools and disclaim tests (refactoring)
 * Remove specific DATASTART definition for ancient OpenBSD/m68k
 * Remove thread_blocked field in GC_thread (refactoring)
 * Remove trailing dot in WARN messages
+* Remove unneeded casts in GC_PUSH_ALL_SYM (refactoring)
 * Remove unneeded n_blocks local variable in malloc.c and reclaim.c
+* Remove unprefixed GRANULE_BYTES, TINY_FREELISTS, WORDSZ macros
 * Remove unreachable code in GC_lookup_pthread (refactoring)
 * Remove unused DCL_LOCK_STATE (refactoring)
 * Remove use of emscripten_scan_stack (refactoring)
@@ -288,23 +347,28 @@
 * Replace C-style casts in C++ headers and cpptest (refactoring)
 * Replace GC_MARK_FO macro with inline functions (refactoring)
 * Replace comments about GC is held or not with relevant assertions
+* Replace hard-coded 0x80000000 to SIGNB for pointer-sized values
 * Replace init_netbsd_elf with init_linux_data_start on NetBSD (refactoring)
 * Replace obsolete AC_TRY_COMPILE/LINK/RUN in configure.ac (refactoring)
 * Replace target names with '$@' in Makefile.direct (refactoring)
+* Require to specify CPP_WORDSZ in gcconfig.h for each supported arch
 * Return free memory to OS explicitly before getting new memory from OS
 * Roundup size passed to GC_expand_hp
+* Set name of GC marker threads on OpenBSD
 * Simplify MacOS-related code in GC_register_data_segments (refactoring)
 * Simplify code of GC_allochblk_nth (refactoring)
 * Simplify code to define USE_x_SPECIFIC macros in thread_local_alloc.h
 * Simplify expression to clear extra bits in add_ext_descriptor (refactoring)
 * Simplify gcconfig code to define IRIX5 and ULTRIX on mips (refactoring)
 * Simplify test_basics() and test_extras() in cordtest (refactoring)
+* Specify GC_CALLBACK calling conventions for GC_mark_proc
 * Specify that error conditions are unlikely to be true in threads code
 * Specify that internal allocations failure is unlikely (refactoring)
 * Specify that out-of-memory is unlikely in typed alloc and make descriptor
 * State explicitly that license is MIT-style
 * Support 32-bit mode on E2K
 * Support CFLAGS_EXTRA in rare build scripts (NT/WCC_MAKEFILE, digimars.mak)
+* Support Embox/x86 (single-threaded)
 * Support GC_memalign with alignments greater than HBLKSIZE
 * Support Linux/sw_64 (sunway-linux)
 * Support QNX on arm[64] and x86[_64]
@@ -316,10 +380,12 @@
 * Test garbage collection from a deep recursion in gctest
 * Test manual self-suspend in gctest
 * Test realloc() in leaktest
+* Test that CORD_oom_fn variable could be set from cordtest
 * Test world stop while other thread in deep recursion in gctest (pthreads)
 * Treat GC_arrays as a part of internal memory when printing its size
 * Treat warnings as errors in C++ code if configure --enable-werror
 * Try find libatomic_ops installed by cmake if with_libatomic_ops (CMake)
+* Undefine PUSHn macros after use in win32_threads.c (refactoring)
 * Uniform use of GC_lookup_by_pthread in GC_pthread_join/detach (refactoring)
 * Unify GC_Thread_Rep and thread id type in win32_threads.c (refactoring)
 * Unify GC_[mark_]lock_holder variable definition (refactoring)
@@ -331,13 +397,19 @@
 * Use EXPECT in checks of MAIN_THREAD bit (refactoring)
 * Use GC_delete_thread instead of GC_delete_gc_thread_no_free (refactoring)
 * Use GC_printf in cpptest consistently (refactoring)
+* Use LOGWL to define WORDS_TO_BYTES() and BYTES_TO_WORDS() (refactoring)
+* Use a dedicated integer type to hold function pointers (refactoring)
+* Use a macro internally to designate Cygwin and MSWin/WinCE (refactoring)
+* Use a macro internally to designate Free/Net/OpenBSD (refactoring)
 * Use cast to void instead of the attribute to indicate unused arguments
 * Use consistent variables naming in typd_mlc.c (refactoring)
 * Use distinct MACH_TYPE for WebAssembly (refactoring)
 * Use inline keyword in GC_INLINE (bcc)
 * Use modHBLKSZ where possible (refactoring)
 * Use register_my_thread_inner to add initial thread in pthread_support.c
+* Use signed_word instead of ptrdiff_t for pointers delta (refactoring)
 * Use single-argument suspend_handler for E2K, HP_PA, IA64, M68K
+* Use unsigned32 type for all internal 32-bit variables and literals
 * Warn if heap has grown while GC was disabled
 * Workaround 'TEXT is unknown macro' cppcheck FP warning
 * Workaround 'data access w/o lock' code defect FP in GC_incr_bytes_freed
