Update AUTHORS file (add Joe Jones)

--- a/AUTHORS
+++ b/AUTHORS
@@ -229,6 +229,7 @@ Jie Liu <lj8175@gmail.com>
 Jim Marshall <jim.marshall@wbemsolutions.com>
 Jim Meyering <jim@meyering.net>
 Joao Abecasis <joao@abecasis.name>
+Joe Jones <joejo@unity3d.com>
 Joerg Sonnenberger <joerg@britannica.bec.de>
 Johannes Schmidt <jschmidt@avtrex.com>
 Johannes Totz <jtotz@ic.ac.uk>
