Update AUTHORS file

--- a/AUTHORS
+++ b/AUTHORS
@@ -402,6 +402,7 @@ Samuel Thibault <samuel.thibault@gnu.org>
 Scott Ananian <cananian@lesser-magoo.lcs.mit.edu>
 Scott Ferguson <scott.ferguson@unity3d.com>
 Scott Schwartz <schwartz@groucho.cse.psu.edu>
+Sebastian Schoner <sebastian.schoner@unity3d.com>
 Shawn Wagner <shawnw@speakeasy.org>
 Shea Levy <shea@shealevy.com>
 Shiro Kawai <shiro@lava.net>
