Update ChangeLog file (v7.2 - v7.4 changes only)

--- a/ChangeLog
+++ b/ChangeLog
@@ -580,9 +580,11 @@ Also, includes 7.4.4 changes
 
 * Eliminate 'unused value' gcc warnings in init_global_static_roots (Symbian)
 * Fix 'implicit declaration of function sbrk' gcc error on Symbian
+* Fix 'unused GC_set_and_save_fault_handler' warning on OS X
 * Fix GC_push_stack_for() to push also Xmm registers on Windows/x64
 * Fix MACH_TYPE macro redefinition on Symbian/arm
 * Fix missing GC_pthread_sigmask on Free/NetBSD
+* Fix missing GC_pthread_sigmask on NetBSD
 * Fix missing redirect and implementation of pthread_sigmask() on OpenBSD
 
 Also, includes 7.2r changes.
@@ -1152,14 +1154,17 @@ Also, includes 7.2 changes
 
 * Fix 'g++ not found' error on OpenBSD (Makefile.direct)
 * Fix 'implicit declaration of iscntrl()' warning in cord/de_win (MinGW)
+* Fix 'info' buffer potential overrun in GC_save_callers
 * Fix 'missing sysconf() prototype' gcc error in setjmp_t tool (OpenBSD)
 * Fix SVR4 macro definition order
 * Fix asm constraint in LONG_MULT for gcc/x86
 * Fix bitwise negation and rounding direction in setjmp_t tool
+* Fix closing bracket placement for case statement in configure
 * Fix missing outermost parentheses in CORD_pos_cur_char_addr
 * Fix missing type widening before left shift in GC_MAKE_PROC
 * Fix misspelled GC_HEADERS_H macro in gc_priv.h
 * Fix typos in comments
+* Fix update of last_back_trace_gc_no if KEEP_BACK_PTRS is not defined
 
 
 == [7.2q] 2023-05-25 ==
